# Gomoku

./: CMakeLists.txt  main.cpp  main_gui.cpp
include/: AIPlayer.hpp  Board.hpp  Game.hpp  GameController.hpp  GameWindow.hpp  HumanPlayer.hpp  Player.hpp
src/: AIPlayer.cpp  Board.cpp  Game.cpp  GameController.cpp  GameWindow.cpp  HumanPlayer.cpp  Player.cpp
